# entropy

./: .testr.conf  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  tox.ini
entropy/: exception.py  manager.py  service.py  utils.py
entropy/api/: app.py  v1.py
entropy/cmd/: agent.py  api.py  db.py  server.py
entropy/db/: __init__.py  api_models.py  impl_sqlalchemy.py
entropy/db/sqlalchemy/: models.py
entropy/db/sqlalchemy/migrate_repo/: migrate.cfg
entropy/openstack/common/: eventlet_backdoor.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  policy.py  service.py  strutils.py  systemd.py  threadgroup.py
entropy/openstack/common/config/: generator.py
foobar/: carbonara.py  cli.py  cmd.py  manager.py  service.py
foobar/api/: app.py  v1.py
foobar/cmd/: __init__.py  agent.py  api.py  db.py  server.py
foobar/db/: __init__.py  api_models.py  impl_sqlalchemy.py
foobar/db/sqlalchemy/: models.py
foobar/db/sqlalchemy/migrate_repo/: README  migrate.cfg
foobar/indexer/: __init__.py  null.py  sqlalchemy.py
foobar/openstack/common/: eventlet_backdoor.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  policy.py  service.py  strutils.py  systemd.py  threadgroup.py
foobar/openstack/common/config/: generator.py
foobar/rest/: __init__.py  app.py
foobar/server/: __init__.py
tools/config/: check_uptodate.sh  generate_sample.sh
(+2 files in other folders)
