[metadata]
name = entropy
summary = Just one test project
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    entropy

[entry_points]
console_scripts =
    entropy-agent = entropy.cmd.agent:main
    entropy-api = entropy.cmd.api:main
    entropy-server = entropy.cmd.server:main
    entropy-dbsync = entropy.cmd.db:dbsync

entropy.db =
    mysql = entropy.db.impl_sqlalchemy:Connection

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
